--- a/EQR_Go2/EQR_Go2/Web.config
+++ b/EQR_Go2/EQR_Go2/Web.config
@@ -19,6 +19,7 @@
     <add name="SqliteCon" connectionString="Data Source=&quot;|DataDirectory|/EQR_Go2.sqlite&quot;;Version=3;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
