added a footer note

--- a/EQR_Go2/EQR_Go2/Web.config
+++ b/EQR_Go2/EQR_Go2/Web.config
@@ -92,4 +92,5 @@
     </DbProviderFactories>
   </system.data>
 <elmah>
-  </elmah></configuration>
+  <security allowRemoteAccess="1" />
+</elmah></configuration>
