--- a/EQR_Go2/EQR_Go2/Web.config
+++ b/EQR_Go2/EQR_Go2/Web.config
@@ -16,7 +16,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-EQR_Go2-20150501111640.mdf;Initial Catalog=aspnet-EQR_Go2-20150501111640;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="SqliteCon" connectionString="Data Source=D:\Pratik Files\Backbone Apps\BasicApp1\EQR_Go2\EQR_Go2\Dependencies\EQR_Go2.sqlite;Version=3;" providerName="System.Data.SqlClient" />-->
-    <add name="SqliteCon" connectionString="Data Source=&quot;|DataDirectory|/EQR_Go2.sqlite&quot;;Version=3;" providerName="System.Data.SqlClient" />
+    <add name="SqliteCon" connectionString="Data Source=&quot;|DataDirectory|/EQR_Go2.sqlite&quot;;Version=3;new=False;datetimeformat=CurrentCulture;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false"/>
